Refactoring and code polish